<resources>
    <string name="app_name">SummerPractice</string>
    <string name="app_name_1">I (don\'t) hate Android Studio</string>
    <string name="start">START</string>
    <string name="name">name [1–50 symbols]</string>
    <string name="description">Enter the following data and find out what HEX color you are!</string>
    <string name="height">height [1–249]</string>
    <string name="html_colors">HEX colors</string>
    <string name="weight">weight [1–249]</string>
    <string name="age">age [1–149]</string>
    <string name="defval">defval</string>
    <string name="excMsg">Invalid input data</string>
</resources>